# fastargs

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: full_simple_example.py
fastargs/: __init__.py  config.py  decorators.py  dict_utils.py  exceptions.py  param.py  section.py  state.py  validation.py
tests/: test_decorators.py  test_main.py  test_sources.py  test_validation.py
tests/test_module/: file1.py  with_params.py
